--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="large-4 columns"></div>
     </div>
     <div class="row">
-      <div class="large-6 columns"><img id="beans" src="http://www.paqoo.com/gudang/hot-photography-coffee-beans-fullhd-free-hd-wallpaper.jpg" /></div>
+      <div class="large-6 columns"><img id="beans" src="images/coffeebeans.jpg" /></div>
       <div class="large-6 columns description"><p>At Joe's Coffee roast our coffee with care, tending to each bean as if it is our own child. Hand-picked by well-compansated laborers in only the most obscure coutries. Order from a variety of blends; such as Uruguayan-Egyptian Cinnamon, Jamaican Rastaa Good Vibe, or Italian Vespa Pretension.</p></div>
     </div>
      <div class="row">
