--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <div class="row">
       <div class="large-6 columns"><img id="beans" src="images/coffeebeans.jpg" /></div>
-      <div class="large-6 columns description"><p>At Joe's Coffee roast our coffee with care, tending to each bean as if it is our own child. Hand-picked by well-compansated laborers in only the most obscure coutries. Order from a variety of blends; such as Uruguayan-Egyptian Cinnamon, Jamaican Rastaa Good Vibe, or Italian Vespa Pretension.</p></div>
+      <div class="large-6 columns description panel"><p>At Joe's Coffee roast our coffee with care, tending to each bean as if it is our own child. Hand-picked by well-compansated laborers in only the most obscure coutries. Order from a variety of blends; such as Uruguayan-Egyptian Cinnamon, Jamaican Rastaa Good Vibe, or Italian Vespa Pretension.</p></div>
     </div>
      <div class="row">
       <div class="large-12 columns space" id="products"><h1>Products</h1></div>
@@ -91,10 +91,11 @@
       <div class="large-12 columns space" id="location"><h1>Location</h1></div>
     </div>
     <div class="row">
-      <div class="large-4 columns"><p>We are located in the middle of nowhere Vermont. Just drive through the Green Mountains until you smell coffee.</div>
+      <div class="large-4 columns panel"><p>We are located in the middle of nowhere Vermont. Just drive through the Green Mountains until you smell coffee.</div>
       <div class="large-4 columns">
         <iframe width="300" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps?ie=UTF8&amp;ll=44.139841,-73.048096&amp;spn=0.298616,0.523911&amp;t=m&amp;z=11&amp;output=embed"></iframe><br /><small><a href="https://www.google.com/maps?ie=UTF8&amp;ll=44.139841,-73.048096&amp;spn=0.298616,0.523911&amp;t=m&amp;z=11&amp;source=embed" style="color:#0000FF;text-align:left">View Larger Map</a></small>
-      </div>  
+      </div>
+      <div class="large-4 columns"></div>  
     </div> 
     <script src="js/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
